--- a/.env.telegram.example
+++ b/.env.telegram.example
@@ -1,2 +1,4 @@
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
+# Optional: for supergroup topics (leave empty or remove if not using topics)
+TELEGRAM_THREAD_ID=
