--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@playwright/mcp": "^0.0.51",
     "@playwright/test": "^1.57.0",
     "@tenkeylabs/dappwright": "^2.12.0",
-    "@types/node": "^25.0.0",
+    "@types/imap-simple": "^4.2.10",
+    "@types/mailparser": "^3.4.6",
+    "@types/node": "^25.0.3",
     "adm-zip": "^0.5.16",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "otplib": "^12.0.1",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@anthropic-ai/claude-code": "^2.0.64"
+    "@anthropic-ai/claude-code": "^2.0.64",
+    "imap-simple": "^5.1.0",
+    "mailparser": "^3.9.1"
   }
 }
